--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "node"
   ],
   "author": "Alvaro Diaz del Mazo",
-  "license": "Unlicense"
+  "license": "Unlicense",
+  "dependencies": {
+    "chalk": "^2.3.1",
+    "figlet": "^1.2.0"
+  }
 }
